# docs2PDF

./: .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  Makefile  README.md  WALKTHROUGH.md  main.py  pyproject.toml  reproduce_code_formatting.py  reproduce_discovery.py  skills-lock.json  test_font_size.py  test_trafilatura.py  test_trafilatura2.py  test_trafilatura3.py  test_trafilatura4.py  test_trafilatura_code.py
src/docs2pdf/: __main__.py  crawler.py  database.py  generator.py  tui.py  widgets.py
src/docs2pdf/templates/: base.html
tests/: conftest.py  test_crawler.py  test_crawler_depth.py  test_crawler_hierarchy.py  test_database.py  test_database_pages.py  test_formatting_fix.py  test_generator.py
